# bnk-extract-GUI

./: .gitignore  .replit  CMakeLists.txt  IDropTarget.c  IDropTarget.h  LICENSE.txt  Makefile  README.md  api.h  gui.c  gui.exe.manifest  manifest.rc  resource.h  resource.rc  settings.c  settings.h  templatewindow.c  templatewindow.h  test.c  treeview_extension.c  treeview_extension.h  utility.c  utility.h
bnk-extract/: Makefile  api.h  bin.c  bin.h  bnk.c  bnk.h  defs.h  extract.c  extract.h  gnu_minmax.h  sound.c  static_list.h  wpk.c  wpk.h
bnk-extract/revorb/: api.h  revorb.c
bnk-extract/ww2ogg/: Bit_stream.hpp  codebook.cpp  errors.hpp  ww2ogg.cpp  wwriff.cpp  wwriff.hpp
libogg-1.3.5/: CMakeLists.txt
libvorbis-1.3.7/: CMakeLists.txt
testshit/: Makefile  defs.h  fix.patch  list.h  main.c
